--- a/.babelrc
+++ b/.babelrc
@@ -8,5 +8,16 @@
     }],
     "stage-2"
   ],
-  "plugins": ["transform-vue-jsx", "transform-runtime"]
+  "plugins": ["transform-vue-jsx", "transform-runtime",["import", {
+    "libraryName": "vant",
+    "libraryDirectory": "es",
+    "style": true
+  }]
+  ],
+  "env": {
+    "test": {
+      "presets": ["env","stage-2"],
+      "plugins": ["transform-vue-jsx", "transform-es2015-modules-commonjs", "dynamic-import-node"]
+    }
+  }
 }
